# WikidataTextEmbedding

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_experiments.sh  run_pushhuggingface.sh
docker/1_Data_Processing_save_labels_descriptions/: run.py
docker/2_Data_Processing_save_items_per_lang/: run.py
docker/3_Add_Wikidata_to_DB/: Dockerfile  requirements.txt  run.py
docker/4_Run_Retrieval/: requirements.txt  run.py
docker/5_Run_Rerank/: run.py
docker/6_Push_Huggingface/: run.py
docker/7_Create_Prototype/: requirements.txt  run.py
notebooks/: 1-Data_Preparation.ipynb  1.2-Property_Filtering_and_Sorting copy.ipynb  2-Data_Embedding.ipynb  2-Item_Embedding.ipynb  2.2-Property_Embedding.ipynb  3-Evaluation_Data_Preparation.ipynb  4-Evaluation_Calculation.ipynb  5-Rerank_Results.ipynb  Data_Sample_Preparation.ipynb  Push_to_Huggingface.ipynb
scripts/: filter_stats.py  run_pipeline_with_wdtextifier.sh  visualize_wikiproj_stats.py  wikiproj_stats.py
src/: JinaAI.py  WikidataDumpReader.py  WikidataFilter.py  WikidataJSONCleaner.py  __init__.py  runStats.py  utils.py  wikidataCache.py  wikidataDumpReader.py  wikidataEmbed.py  wikidataEntityDB.py  wikidataHuggingFace.py  wikidataIDLogDB.py  wikidataLangDB.py  wikidataRetriever.py  wikidataVectorCache.py  wikidataVectorDB.py
src/experimental_functions/: Get_Wikidata_Stats.py  count_langs.py  count_validbase64.py  merge_cache.py
src/language_variables/: ar.py  de.py  en.py  es.py  fr.py  it.py  pt.py  ru.py
