[project]
name = "wikidatatextembedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astrapy>=2.2.1",
    "beautifulsoup4>=4.14.3",
    "datasets>=4.4.1",
    "einops>=0.8.2",
    "huggingface-hub>=1.9.2",
    "numpy>=2.4.4",
    "orjson>=3.11.8",
    "sqlalchemy>=2.0.49",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.7.0",
]
